# RandomWalkModel

./: .gitignore  README.md  requirements.txt
report/: 计算优化实验报告_无个人信息版.tex
src/C/: CMakeLists.txt  C_baseline.out  main.c
src/C_ASM/: CMakeLists.txt  gen_rand_arr.s  main.c  simulate.s
src/C_ASM_SIMD/: CMakeLists.txt  main.c  simulate.s
src/C_ASM_SIMD_MULTI_THREAD/: CMakeLists.txt  C_ASM_SIMD_MULTI_THREAD.out  gen_rand_arr.s  main.c
src/Python_CuPy/: main.py
src/Python_NumPy/: main.py
src/Python_baseline/: main.py
tests/multi_thread/: simulate.out  test.py
tests/multi_thread_cpu/: simulate.out  simulate.s  test.py
tests/speedtests/: C_ASM.out  C_ASM_SIMD.out  test.py
